# 2password

./: .clippy.toml  .editorconfig  .env.example  .gitignore  .gitmodules  CHANGES.md  COMPREHENSIVE_TEST_REPORT.md  Cargo.toml  DEPLOYMENT_SUMMARY.md  FINAL_DEPLOYMENT_STATUS.md  PASSKEY_UI_IMPLEMENTATION_REPORT.md  PHASE1_MANUAL_TESTING.md  PHASE1_MANUAL_TEST_FLOW.md  PHASE2_COMPLETION_SUMMARY.md  PHASE2_DEVELOPMENT_PLAN.md  PHASE2_MANUAL_TESTING.md  PHASE2_TEST_REPORT.md  README.md  README_SCRIPTS.md  TEST_REPORT.md  build-and-run.sh  deny.toml  dev.sh  index.html  package-lock.json  package.json  playwright.config.js  pnpm-lock.yaml  rustfmt.toml  stop-dev.sh  test.sh  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.github/workflows/: ci.yml  security.yml
.taskmaster/: state.json
.taskmaster/docs/: phase3-prd.md  prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
browser-extension/: README.md  manifest.json
browser-extension/_locales/en/: messages.json
browser-extension/src/background/: context-menu.js  native-messaging.js  password-detector.js  service-worker.js
browser-extension/src/content/: content-script.css  content-script.js
browser-extension/src/popup/: popup.css  popup.html
browser-extension/src/shared/: storage.js
docs/: COMPREHENSIVE_TEST_REPORT.md  Changes.md  Features.md  PHASE3_DEVELOPMENT_PLAN.md  PROJECT_SECURITY_ASSESSMENT.md  Passkey_Integration_Test_Report.md  Phase3_Test_Report.md  Solution.md  Task17.5_Password_Health_Dashboard_Report.md  Task20_Security_Infrastructure_Report.md  TestReport-CrossBrowserExtension.md  TestReport-PasswordHealthDashboard.md  TestReport-Phase3.2.md  ValidationReport-CrossBrowserExtension.md
playwright-report/: index.html
rust-taskmaster-package/: .env.example  README.md  setup-new-rust-project.sh
rust-taskmaster-package/templates/: new-project-template.md
scripts/: dev-tools.sh  export-taskmaster-config.sh  setup-taskmaster.sh
src/: App.tsx  error.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  demo-vault.enc  stop-dev.sh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep
src-tauri/src/: lib.rs  main.rs
src/auth/: mod.rs  passkey.rs  password.rs  recovery.rs  touchid.rs
src/cli/: commands.rs  mod.rs
src/components/: AddPasswordModal.tsx  EnhancedPasswordModal.tsx  PasskeyAuth.tsx  PasswordHealthDashboard.tsx  PasswordList.tsx  PasswordModal.tsx  Settings.tsx  Sidebar.tsx  VaultSetup.tsx
src/crypto/: aes_gcm.rs  key_derivation.rs  mod.rs  secret_sharing.rs  secure_random.rs
src/import_export/: csv.rs  mod.rs  parser.rs
src/import_export/formats/: bitwarden.rs  chrome.rs  firefox.rs  lastpass.rs  mod.rs  onepassword.rs
src/password_health/: analyzer.rs  breach_checker.rs  dashboard.rs  mod.rs  scorer.rs  security_scorer.rs
src/security/: audit_log.rs  compliance.rs  event_monitor.rs  hardware_security.rs  mod.rs  zero_trust.rs
src/storage/: entry.rs  mod.rs  vault.rs
src/styles/: globals.css
src/types/: index.ts
src/utils/: api.ts
taskmaster-config-export/: README.md
test-results/: .last-run.json
test-results/debug-buttons-VaultSetup-B-574db-visibility-and-clickability-chromium/: error-context.md
tests/: debug-buttons.spec.js  integration_tests.rs  reused_password_detection.rs  security_infrastructure_tests.rs
