[package]
name = "twopassword"
version = "0.1.0"
edition = "2021"
authors = ["Developer <dev@example.com>"]
description = "A secure password manager with Touch ID integration"
license = "MIT OR Apache-2.0"
rust-version = "1.70"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization and data handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Command line interface
clap = { version = "4.0", features = ["derive", "env"] }
rpassword = "7.0"

# Cryptography and security
ring = "0.17"
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
zeroize = { version = "1.7", features = ["derive"] }

# WebAuthn/Touch ID integration (macOS specific)
webauthn-rs = { version = "0.4", features = ["danger-allow-state-serialisation"] }

# macOS system integration
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
core-foundation = "0.9"
security-framework = "2.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# File system operations
directories = "5.0"
tempfile = "3.0"

# URL and base64 handling
url = "2.4"
base64 = "0.21"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# CSV processing for import/export
csv = "1.3"

# HTTP client for WebAuthn
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
# Testing framework
tokio-test = "0.4"

# Property-based testing
proptest = "1.0"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Test utilities
pretty_assertions = "1.4"
serial_test = "3.0"

[profile.dev]
# Fast builds for development
opt-level = 0
debug = 2
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256

[profile.dev.package."*"]
# Optimize dependencies even in debug mode for better performance
opt-level = 3

[profile.release]
# Optimized for performance and security
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = "thin"
panic = 'abort'
incremental = false
codegen-units = 1
