[package]
name = "twopassword-gui"
version = "1.0.0"
description = "A modern password manager with Touch ID integration"
authors = ["2Password Team"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "twopassword_gui_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "twopassword-gui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Phase 1 core library
twopassword = { path = ".." }

# Tauri dependencies  
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"  
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-window-state = "2"
tauri-plugin-clipboard-manager = "2"

# Additional dependencies for GUI features
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "macos")'.dependencies]
# macOS specific dependencies
security-framework = "3.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
